--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ai": "^4.3.16",
     "dotenv": "^17.2.0",
     "exa-js": "^1.8.17",
+    "express": "^5.2.1",
     "inngest": "^3.40.2",
     "inngest-cli": "^1.11.5",
     "pg": "^8.16.3",
